--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,8 @@
     <string name="app_name">MovieApp</string>
     <string name="popular">Popular</string>
     <string name="upcoming">Upcoming</string>
+    <string name="language">"Language: "</string>
+    <string name="release_date">"Release date: "</string>
+    <string name="votes">" Votes"</string>
+    <string name="overview">Overview</string>
 </resources>
